Adding params to controllers
