# apps/api/docs/swagger.json
@@ -2,7 +2,11 @@
     "swagger": "2.0",
     "info": {
         "title": "Acetime Business API Documentation",
-        "contact": {},
+        "contact": {
+            "name": "Acetime Soluções",
+            "url": "https://www.acetime.com.br",
+            "email": "develop@acetime.com.br"
+        },
         "version": "1.0.0"
     },
     "host": "localhost:3000",
@@ -21,11 +25,25 @@
                     "enterprise"
                 ],
                 "summary": "Enterprises",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Current page to paginate",
+                        "name": "page",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/http_exception.HttpSuccess"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/http_exception.HttpError"
                         }
                     }
                 }
@@ -141,6 +159,39 @@
                             "type": "string"
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "http_exception.HttpError": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "any"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                }
+            }
+        },
+        "http_exception.HttpSuccess": {
+            "type": "object",
+            "properties": {
+                "current_page": {
+                    "type": "integer"
+                },
+                "data": {
+                    "type": "any"
+                },
+                "limit": {
+                    "type": "integer"
+                },
+                "page": {
+                    "type": "integer"
                 }
             }
         }
