# apps/api/framework/exception/http-error.go
@@ -1,0 +1,7 @@
+package http_exception
+
+type HttpError struct {
+	Error   any    `json:"error"`
+	Message string `json:"message"`
+	Status  int    `json:"status"`
+}
